# bevyPractice

./: Cargo.toml  README.md
src/: components.rs  main.rs  res.rs  systems.rs
src/character/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/controll/: mod.rs  systems.rs
